# vibecoding_week_1

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md
backend/: AGENTS.md  Dockerfile  pyproject.toml  render.yaml
backend/app/: auth.py  board.py  database.py  main.py  models.py  schemas.py  seed.py
backend/app/services/: __init__.py  ai.py  chat.py
backend/data/: pm.db
backend/tests/: conftest.py  test_ai.py  test_auth.py  test_auth_required.py  test_board.py  test_cards.py  test_chat.py  test_columns.py  test_db_init.py  test_frontend.py  test_health.py
docs/: DATABASE.md  PLAN.md  SCHEMA.json
frontend/: AGENTS.md  next.config.ts  playwright.config.ts
frontend/src/app/: globals.css  page.tsx
frontend/src/app/board/: page.tsx
frontend/src/app/login/: page.test.tsx  page.tsx
frontend/src/app/register/: page.tsx
frontend/src/components/: AuthGate.test.tsx  AuthGate.tsx  ChatInput.test.tsx  ChatInput.tsx  ChatMessage.test.tsx  ChatMessage.tsx  ChatSidebar.test.tsx  ChatSidebar.tsx  KanbanBoard.test.tsx  KanbanBoard.tsx  KanbanCard.tsx  KanbanCardPreview.tsx  KanbanColumn.tsx  NewCardForm.tsx
frontend/src/lib/: api.ts  auth.test.ts  auth.ts  board.ts  chat.ts
frontend/tests/: auth.spec.ts  kanban.spec.ts
scripts/: AGENTS.md  start.bat  start.sh  stop.bat  stop.sh
