[project]
name = "pm-backend"
version = "0.1.0"
description = "Project Management backend"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "itsdangerous>=2.2",
    "uvicorn[standard]>=0.30",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "httpx2>=2.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
